<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="lifecycleOwner"
            type="androidx.lifecycle.LifecycleOwner" />

        <variable
            name="data"
            type="com.anshabunin.weatherapplication.viewmodel.WeatherMainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="25dp"
        android:background="@drawable/gradient_background"
        tools:context=".ui.WeatherMainFragment">

        <ImageView
            android:id="@+id/btn_list_town"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <LinearLayout
            android:id="@+id/linear_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_name_town"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:text="@{data.weatherData.data.location.name}"
                tools:text="Moscow"/>

            <TextView
                android:id="@+id/updated_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:text="@{@string/location_description(data.weatherData.data.location.region, data.weatherData.data.location.country)}"
                tools:text="Moscow City, Russia"/>

            <ImageView
                android:id="@+id/weatherIcon"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/suncloud" />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sdp"
                tools:text="Clear sky"
                android:text="@{data.weatherData.data.current.condition.text}"/>

            <TextView
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:textColor="@color/white"
                android:textSize="@dimen/_70sdp"
                android:textStyle="bold"
                tools:text="24°C"
                android:text="@{@string/temperature_format(data.weatherData.data.current.tempC)}"/>

            <LinearLayout
                android:id="@+id/overviewContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/temp_min"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/_11sdp"
                        android:textAlignment="textStart"
                        android:textColor="@color/white"
                        tools:text="мин. температура: 20°C"
                        android:text="@{@string/temperature_format_min(data.weatherData.data.current.tempC - 5)}"/>

                    <TextView
                        android:id="@+id/temp_max"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/_11sdp"
                        android:textAlignment="textEnd"
                        android:textColor="@color/white"
                        tools:text="макс. температура: 28°C"
                        android:text="@{@string/temperature_format_max(data.weatherData.data.current.tempC + 5)}"/>

                </LinearLayout>

            </LinearLayout>

            <GridLayout
                android:id="@+id/detailsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:columnCount="3"
                android:orientation="horizontal"
                android:rowCount="2">

                <!-- First Row -->
                <LinearLayout
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="wrap_content"
                    android:background="#3CF1EBF1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_gravity="start"
                    android:layout_column="0"
                    android:layout_row="0">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/uv"
                        app:tint="@color/white"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="UV"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:id="@+id/uv_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp"
                        tools:text="1"
                        android:text="@{String.valueOf(Math.round(data.weatherData.data.current.uv))}"/>

                </LinearLayout>

                <!-- Second Cell -->
                <LinearLayout
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="wrap_content"
                    android:background="#3CF1EBF1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:layout_column="1"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_row="0">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/osadki"
                        app:tint="@color/white"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_precipitation"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:id="@+id/sunset_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp"
                        android:text="@{@string/wind_format(data.weatherData.data.current.precipMm)}"
                        tools:text="30 мм"/>

                </LinearLayout>

                <!-- Third Cell -->
                <LinearLayout
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="wrap_content"
                    android:background="#3CF1EBF1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:layout_column="2"
                    android:layout_row="0">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/wind"
                        app:tint="@color/white"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:id="@+id/wind_speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp"
                        android:text="@{@string/wind_format(data.weatherData.data.current.windKph)}"
                        tools:text="10 км/ч"/>

                </LinearLayout>

                <!-- Fourth Cell -->
                <LinearLayout
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="wrap_content"
                    android:background="#3CF1EBF1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:padding="8dp"
                    android:layout_column="0"
                    android:layout_row="1">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/humidity"
                        app:tint="@color/white"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:id="@+id/humidity_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp"
                        android:text="@{@string/humidity_format(data.weatherData.data.current.humidity)}"
                        tools:text="1 %"/>

                </LinearLayout>

                <!-- Fifth Cell -->
                <LinearLayout
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="wrap_content"
                    android:background="#3CF1EBF1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:padding="8dp"
                    android:layout_column="1"
                    android:layout_row="1">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/pressure"
                        app:tint="@color/white"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:id="@+id/pressure_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp"
                        android:text="@{@string/pressure_format(data.weatherData.data.current.pressureMb)}"
                        tools:text="1 мбар"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="wrap_content"
                    android:background="#3CF1EBF1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:padding="8dp"
                    android:layout_column="2"
                    android:layout_row="1">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/suai"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_suai"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp"
                        android:text="@string/suai" />
                </LinearLayout>

            </GridLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:weightSum="3.6">

                <Button
                    android:id="@+id/network_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1."
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/_11sdp"
                    android:text="@string/text_network_btn"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.05"/>

                <Button
                    android:id="@+id/database_btn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.1"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/_11sdp"
                    android:text="@string/database_btn_text"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.05"/>

                <Button
                    android:id="@+id/database_save_btn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.4"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/_11sdp"
                    android:text="@string/text_save_btn"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>